@@ -22,7 +22,7 @@ The \code{Rcpp::interfaces} attribute is added to a C++ source file to specify w
     When \code{cpp} bindings are requested code is generated as follows:
 
 \enumerate{
-    \item Bindings are generated into a header file located in the \code{inst/include} directory of the package using the naming convention \emph{PackageName.hpp}
+    \item Bindings are generated into a header file located in the \code{inst/include} directory of the package using the naming convention \emph{PackageName.h}
     \item The generated header file allows calling the exported C++ functions without any linking dependency on the package (this is based on using the \code{R_RegisterCCallable} and \code{R_GetCCallable} functions).
     \item The exported functions are defined within a C++ namespace that matches the name of the package.
 }
@@ -31,7 +31,7 @@ For example, an exported C++ function \code{foo} could be called from package \c
 \preformatted{
    // [[Rcpp::depends(MyPackage)]]
 
-   #include <MyPackage.hpp>
+   #include <MyPackage.h>
 
    void foo() {
       MyPackage::bar();
@@ -44,7 +44,7 @@ For example, an exported C++ function \code{foo} could be called from package \c
 
 \note{
 
-    If a file by the name of \emph{PackageName.hpp} that wasn't generated by \code{compileAttributes} already exists in in the \code{inst/include} directory then it will not be overwritten (rather, an error will occur).
+    If a file by the name of \emph{PackageName.h} that wasn't generated by \code{compileAttributes} already exists in in the \code{inst/include} directory then it will not be overwritten (rather, an error will occur).
     
     A static naming scheme for generated header files is used to ensure consistent usage semantics for clients of exported \code{cpp} interfaces. Packages that wish to export more complex interfaces or additional C++ types are therefore typically better off not using this mechanism.
 
