@@ -7,8 +7,9 @@ Source C++ Code from a File or String
 \code{sourceCpp} parses the specified C++ file or source code and looks for functions marked with the \code{\link[=exportAttribute]{Rcpp::export}} attribute. A shared library is then built and its exported functions are made available as R functions in the specified environment.
 }
 \usage{
-sourceCpp(file = "", code = NULL, env = globalenv(), rebuild = FALSE, 
-          showOutput = verbose, verbose = getOption("verbose"))
+sourceCpp(file = "", code = NULL, env = globalenv(), 
+          rebuild = FALSE, showOutput = verbose, 
+          verbose = getOption("verbose"))
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -36,17 +37,23 @@ sourceCpp(file = "", code = NULL, env = globalenv(), rebuild = FALSE,
 
     Functions exported using \code{sourceCpp} must meet several conditions, including being defined in the global namespace and having return types that are compatible with \code{Rcpp::wrap} and parameter types that are compatible with \code{Rcpp::as}. See the \code{\link[=exportAttribute]{Rcpp::export}} documentation for more details.
     
-    If the code has compilation dependencies on other packages (e.g. \pkg{Matrix}, \pkg{RcppArmadillo}) then an \code{\link[=dependsAttribute]{Rcpp::depends}} attribute should be added naming these dependencies. Note that if you are sourcing a C++ file from within the \code{src} directory of a package then the package's \code{LinkingTo} dependencies are automatically included in the compilation.
+    If the source file has compilation dependencies on other packages (e.g. \pkg{Matrix}, \pkg{RcppArmadillo}) then an \code{\link[=dependsAttribute]{Rcpp::depends}} attribute should be provided naming these dependencies. 
     
-    The \code{sourceCpp} function will not rebuild the shared library if the underlying code has not changed since the last compilation.
+    The \code{sourceCpp} function will not rebuild the shared library if the source file has not changed since the last compilation.
 }
 
 \value{
     Returns (invisibly) a character vector with the names of the R functions that were sourced into the specified environment.
 }
 
+\note{
+    The \code{sourceCpp} function is designed for compiling a standalone source file whose only dependencies are R packages. If you are compiling more than one source file or have external dependencies then you should create an R package rather than using \code{sourceCpp}. Note that the \code{\link[=exportAttribute]{Rcpp::export}} attribute can also be used within packages via the \code{\link{compileAttributes}} function.
+    
+    If you are sourcing a C++ file from within the \code{src} directory of a package then the package's \code{LinkingTo} dependencies, \code{inst/include}, and \code{src} directories are automatically included in the compilation.
+}
+
 \seealso{
-\code{\link[=exportAttribute]{Rcpp::export}}, \code{\link[=dependsAttribute]{Rcpp::depends}}
+\code{\link[=exportAttribute]{Rcpp::export}}, \code{\link[=dependsAttribute]{Rcpp::depends}}, \code{\link{cppFunction}}, \code{\link{evalCpp}}
 }
 
 \examples{
