@@ -1,8 +1,17 @@
 
 2012-11-08  JJ Allaire <jj@rstudio.org>
 
+        * R/Attributes.R: special sourceCpp handling for file within the src
+        directory of a package; use .h as suffix for generated headers
         * src/Attributes.cpp: add information on arguments to Rcpp module;
-        use inline rather than static linkage for generated C++ shims
+        use inline rather than static linkage for generated C++ shims;
+        generated headers: add header guard and use .h suffix;
+        * man/cppFunction.Rd: update documentation
+        * man/sourceCpp.Rd: update documentation
+        * man/evalCpp.Rd: update documentation
+        * man/exportAttribute.Rd: update documentation
+        * man/interfacesAttribute.Rd: update documentation
+
 
 2012-11-08  Romain Francois <romain@r-enthusiasts.com>
 
